@@ -467,10 +467,10 @@ EFFECTCXL=0
 ######################################################################
 
 # The CLASSSYSTEM describes how the character classing system works.
-# The default is 'SUB', but valid values include:
 # SUB        Player can create a character in any one Base class,
 #            and take levels in any of that Base classes subclasses 
 #            by switching.
+# SUB-[N]    As SUB, but can only have maximum [N] classes. See SWITCH.
 # NO         Disables all multi-classing, allowing users to pick from
 #            any of the player-selectable classes, but not to change.
 # NO-BASE    Disables all multi-classing, allowing users to pick from
@@ -483,6 +483,7 @@ EFFECTCXL=0
 #            from and stick with.  Where [X] is a BASE CLASS ID or name.
 # MULTI      Allows the player to select from any of the user-selectable
 #            classes, and then to take levels in any other class at will.
+# MULTI-[N]  As Multi, but can only have max [N] classes. See SWITCH.
 # APP-SUB    All players start as Apprentice, thereafter same as 
 #            the SUB option above.
 # APP-NO     All players start as Apprentice, and are allowed to change
@@ -491,6 +492,9 @@ EFFECTCXL=0
 #            the MULTI option above.
 # DISABLED   Disables the class system altogether.  This is the same as
 #            including CLASSES in the DISABLE flag.
+# ,GAIN=[N]  Define the cost of gaining a new class, [N] Training Points
+# ,SWITCH=[N]Define the cost of switching to a prev class, [N] Train Pts
+# The default is SUB.  Default GAIN is 1, and default SWITCH is 1.
 CLASSSYSTEM=SUB
 
 # The FACTIONS string is a semicolon delimited list of paths
